# rlcube

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  README.md  cube2.ipynb  package.json
checkpoints/: .gitignore  checkpoint_final.pth
rlcube/: .gitignore  cube.blend  cube2.ipynb  main.py  pyproject.toml
rlcube/envs/: __init__.py  cube2.py  test.py
rlcube/models/: .gitignore  models.py  search.py  test.py
rlcube/rlcube/: cube2.py
rlcube/rlcube/envs/: __init__.py  cube2.py
rlcube/rlcube/models/: dataset.py  models.py  search.py
rlcube/rlcube/train/: train.py
rlcube/train/: train.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: canvas.tsx  consts.tsx  cube-piece.tsx  env.tsx  rotation-controller.ts  rotation-panel.tsx  rotator.tsx  rubiks-cube.tsx  state-modal.tsx  ui-controls.tsx  ui-title.tsx  ui.tsx
src/contexts/: control-context.tsx  cubes-context.tsx
