[project]
name = "rlcube"
version = "0.1.0"
description = "Reinforcement Learning for Rubik's Cube"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "gymnasium>=1.2.0",
    "ipykernel>=6.30.1",
    "lightning>=2.5.5",
    "numpy>=2.3.2",
    "tensordict>=0.10.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
